Completed most of student functionality.

--- a/client/stylesheets/index.scss
+++ b/client/stylesheets/index.scss
@@ -1,7 +1,10 @@
 @import "lib";
 @import "global";
+@import "app";
 @import "splash";
 @import "login";
 @import "signup";
-@import "app";
+@import "container";
+@import "navbar";
 @import "home";
+@import "students";
