--- a/client/stylesheets/_lib.scss
+++ b/client/stylesheets/_lib.scss
@@ -33,10 +33,61 @@
   }
 }
 
+.searchBar {
+  display: block;
+  box-sizing: border-box;
+  border: 1px solid #D0D0D0;
+  border-radius: 7px;
+  padding: 10px 15px;
+  height: 36px;
+  line-height: 16px;
+  background: #F0F0F0;
+  font-size: 14px;
+  outline: 0;
+
+  &:focus {
+    border: 2px solid #B0B0B0;
+    background: #F3F3F3;
+  }
+}
+
 .pageTitle {
   font-size: 48px;
   line-height: 48px;
   color: #777;
   margin: 0;
   padding: 30px 0;
+}
+
+// Cards
+
+.card {
+  position: relative;
+  background: white;
+  box-shadow: 0 3px 6px rgba(black, 0.16);
+  padding: 28px 24px;
+}
+
+.cardHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cardTitle {
+  flex: 0 0 auto;
+  font-size: 24px;
+  line-height: 24px;
+  color: black;
+  font-weight: bold;
+  margin: 0;
+}
+
+.cardActions {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
 }
