--- a/client/public/views/index.html
+++ b/client/public/views/index.html
@@ -3,9 +3,10 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>React.js using NPM, Babel6, SASS, Express, and Webpack</title>
+    <title>Georgia Instructional Materials Center</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
     <link rel="stylesheet" type="text/css" href="/build/style.css">
+    <link rel="icon" type="image/png" href="/images/gadoe.png">
     <script src="https://use.fontawesome.com/fe7281fb3b.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
