Restyled UI colors to match GaDOE branding.

--- a/client/stylesheets/_login.scss
+++ b/client/stylesheets/_login.scss
@@ -29,12 +29,12 @@
 }
 
 .Login__submit {
-	@include btn(#3395fb);
+	@include btn($orange);
 	width: 100%;
 	color: white;
 	margin: 16px 0 40px;
 }
 
 .Login__createAccount {
-	color: #3395fb;
+	color: $orange;
 }
