--- a/client/stylesheets/_students.scss
+++ b/client/stylesheets/_students.scss
@@ -31,7 +31,7 @@
 }
 
 .StudentList__button {
-	@include btn(#3395fb);
+	@include btn($orange);
 	flex: 0 0 auto;
 	color: white;
 	margin: 0 0 0 10px;
@@ -114,12 +114,12 @@
 }
 
 .AddStudent__submit {
-	@include btn(#3395fb);
+	@include btn($orange);
 	width: 100%;
 	color: white;
 	margin: 16px 0 40px;
 }
 
 .AddStudent__createAccount {
-	color: #3395fb;
+	color: $orange;
 }
