--- a/client/stylesheets/_navbar.scss
+++ b/client/stylesheets/_navbar.scss
@@ -13,7 +13,7 @@
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 42px;
-	color: #3395fb;
+	color: $orange;
 	padding: 0 20px;
 	cursor: pointer;
 }
@@ -43,7 +43,7 @@
 
 	&:hover {
 		text-decoration: none;
-		border-bottom: 2px solid #3395fb;
+		border-bottom: 2px solid $orange;
 	}
 }
 
