--- a/client/stylesheets/_splash.scss
+++ b/client/stylesheets/_splash.scss
@@ -8,7 +8,7 @@
 	flex: 1 1 auto;
 	position: relative;
 	padding: 32px 32px 0;
-	background: #3395fb;
+	background: #333;
 	color: white;
 }
 
@@ -30,7 +30,7 @@
 
 .Splash__button {
 	@include btn(white);
- 	color: #3395fb;
+ 	color: #333;
  	margin-right: 12px;
 }
 
